[package]
name = "pyo3_measures"
version = "0.1.0"
authors = ["Orest Dubay <orest3.dubay@gmail.com>"]
edition = "2018"

[lib]
name = "pyo3_measures"
crate-type = ["cdylib"]

[dependencies]
regex = "1.3.7"
serde = "1.0.106"
serde_derive = "1.0.106"
serde_json = "1.0.51"
serde_yaml = "0.8.11"
rayon = "1.5"
rand = "0.8"

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]