[package]
name = "data-measures-core"
version = "0.1.0"
authors = ["Orest Dubay <orest3.dubay@gmail.com>"]
edition = "2018"

[lib]
name = "data_measures_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
regex = "1.3.7"
serde = "1.0.106"
serde_derive = "1.0.106"
serde_json = "1.0.51"
serde_yaml = "0.8.11"

rayon = {version="1.5", optional=true}

[features]
multithreading = ["rayon"]