[package]
name = "data-measures-wasm"
version = "0.1.0"
authors = ["Orest Dubay <orest3.dubay@gmail.com>"]
edition = "2018"

[lib]
name = "data_measures_wasm"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
regex = "1.3.7"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.106"
serde_json = "1.0.51"
serde_yaml = "0.8.11"

data-measures-core = { path = "../data-measures-core" }
